<resources>
    <string name="app_name">Snagem</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_how_to_play">HowToPlay</string>
    <string name="HowToPlay">HowToPlay</string>
    <string name="register">Register yourself to play the game. If you are already recruited, enter the registered ID to gain points.</string>
    <string name="tag">Add tags to your profile. Tags describe you and allow others to connect with you over those attributes. You must have at least 5 tags before you can start a mission.</string>
    <string name="mission">Visit the Missions page to see what missions are available. At first, you have 4 missions to choose from; complete a lot of missions to level up and unlock more!</string>
    <string name="snag">Start talking to people! Ask questions, initiate conversations, do a little investigation and light stalking until you find someone to satisfy a mission. Enter their four digit SnagID on the Missions page to complete the missions and gain points!</string>
    <string name="team">When you join Snagem, you will be added to one of three teams: Ninjas, Pirates, and Zombies. These teams are competing to build the best fortress. Every point earned by team members increases the size of your fortress, and your team can score awesome additions to your fortress by completing Team Achievement missions. Visit the Team Achievements page to see how your team is doing!</string>
    <string name="network">Keep it up! Meet new people! Get extra points for recruiting new players. See if you can make it to the top of the leaderboard. Most importantly, make valuable connections with the many people you meet playing Snagem; you never know when a contact will come in handy!</string>
    <string name="head_reg">1. Register</string>
    <string name="head_tag">2. Add Tags</string>
    <string name="head_miss">3. Get Missions</string>
    <string name="head_snag">4. Snag Someone</string>
    <string name="head_team">5. Work Together</string>
    <string name="head_ntwrk">6. Expand Your Network</string>
    <string name="head_FAQS">FAQS</string>
    <string name="q1">Q: I found a bug/way to cheat/security issue/loophole/etc in your game how do I contact you to tell you about it?</string>
    <string name="a1">A: You can report any of these issues you find by submitting them on this form</string>
    <string name="q2">Q: I have an idea or suggestions to improve your game, how can I contact you to tell you about?</string>
    <string name="a2">A: You can submit feature requests or other suggestions for improvement by reporting them on the same form</string>
    <string name="q3">Q: I have a question or concern that is not about feature requests or bugs I have found, how do I contact you?</string>
    <string name="a3">A: If you have a question about anything other than bugs or feature requests/suggestions you can email us at support@unccmakesgames.com.</string>
    <string name="q4">Q: How do you win the game?</string>
    <string name="a4">A: The point of the game is social interaction, and there is not necessarily a set way to win within the game. Realistically, the game stops being playable when you have snagged every person playing, though that is not what the developers wish to happen. The person with the most points at an arbitrary ending period is considered winner. However, due to the nature of the game there is many different ways one can interpret "win" for this particular game.</string>
    <string name="q5">Q: What is the whole objective of the game?</string>
    <string name="a5">A: Snagem is a serious game designed to incorporate social networking into an easy to use platform. The developers intend for the game to continue growing so an end is never reached. The game is designed so the reward is not achieved through ending the game, but through the journey of ubiquitous play. The optimal strategy (optimal in this case referring to getting the most out of playing, not getting first place) is to interact with as many of your classmates as possible.</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_school">Select you School</string>
    <string name="terms1">We really appreciate how excited people are about our game (and we hope to change your minds if you are not yet convinced of our games greatness). With a few rules and guidelines in place, we hope to provide you with a fun and profitable social networking experience.</string>
    <string name="terms2">Please remember that this game is special. What makes it special is that its a game that takes place in a non game environment. There will be people at this conference that are really busy and using more traditional networking methods. There will be times and places where you are busy as well. Please be respectful of the amazing work that everyone is doing at this conference. Don\'t snag in sessions while people are making presentations. Don\'t be rude when approaching others. Don\'t treat people like they are "just a Snag\'em ID number". That doesn\'t feel good for anyone involved. That doesn\'t mean, however, that you can\'t snag busy or serious people, but you may have to approach people with more professional tactics. Consider it stealthy snagging. While you\'re networking, you"ll notice that those types of people may not be signed up for the game but are very valuable to your network. Try to think of ways of approaching serious persons. Have someone introduce you, pull out your business cards, ask them about their research. This game should make social networking easier for you, but it should also serve a practice for more serious social interactions. Just always remember to both have fun AND make it count. Everyone at this conference is worth more than points.</string>
    <string name="terms3">Keep in mind that we are also doing a research study. If you have a few extra minutes please do our Snag\'em pre-test. It really helps us continue our research. You don\'t have to play to do the survey. In fact, it really helps if non-players do the surveys as well. Thanks for being a good samaritan.</string>
    <string name="terms4">Direct identifiers (name, email, etc.) will be collected as part of game play to be presented on the leader board but this information is used for strictly game play purposes and during data analysis identifiers will not be associated with survey responses. During game play, however, these direct identifiers will be associated with you and your network. You can choose during registration if you want to share email address or contact information, but your name absolutely will be displayed on the leaderboard and network visualizations. Please be assured though that we wont use your name anywhere else outside of this event without your expressed consent.</string>
    <string name="terms5">Lastly, we\'re always discovering new and inventive ways for people to break, hack, and exploit our system. We\'ve been working on this game for a few years now so we think we have most of our bases covered. The game is pretty locked down. To be on the safe side, please don\'t use your same password that you use on your bank account and other important things to play this game. We believe this to be common sense to not play a game with top-secret passwords, but just in case: DON\'T DO IT. We make games, so our game isn\'t Fort Knox level secure. We will do our best to guard your information, to the best of our ability.</string>
    <string name="missions1">Here\’s the deal: you have five missions to pick from, and all you need to do is find someone who fits the requirements and get their SnagID. Not enough of a challenge? Then keep this in mind: you get more points for having a connected social network, so SNAG strategically!</string>
    <string name="missions2">Other stuff you might want to know: you get more points for harder missions (lower commonness), level up by completing lots of missions and you lose points for forfeiting missions. Also, you can SNAG people more than once, but you get less points for every repeat connection!</string>
</resources>