<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#2B3E50"
    android:weightSum="1">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/scrollView4"
        android:scrollIndicators="right"
        android:padding="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Terms\n\nNorth Carolina State University\nDepartment of Computer Science\n890 Oval Drive, Raleigh, NC 27606\nSnag\'em: Social Networking Game"
                android:id="@+id/textView11"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\n" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/terms1"
                android:id="@+id/textView12"
                android:textColor="#ffffff"
                android:textSize="17dp"
                android:textAlignment="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\n" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/terms2"
                android:id="@+id/textView13"
                android:textColor="#ffffff"
                android:textSize="17dp"
                android:textAlignment="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\n" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/terms3"
                android:id="@+id/textView14"
                android:textColor="#ffffff"
                android:textSize="17dp"
                android:textAlignment="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\n" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/terms4"
                android:id="@+id/textView15"
                android:textColor="#ffffff"
                android:textSize="17dp"
                android:textAlignment="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="\n" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/terms5"
                android:id="@+id/textView16"
                android:textColor="#ffffff"
                android:textSize="17dp"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I am 18 or older and accept the given terms"
        android:id="@+id/checkBox14"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:textColor="#ffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Email:"
        android:id="@+id/textView17"
        android:textColor="#ffffff"
        android:paddingLeft="30dp"
        android:paddingTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText6"
        android:layout_marginLeft="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next"
        android:id="@+id/button5"
        android:layout_gravity="right"
        android:layout_marginTop="45dp"
        android:layout_marginRight="10dp"
        android:onClick="activityRegister"/>

</LinearLayout>